force-app/main/default/objects/IEP_Transition_Goal__c/IEP_Transition_Goal__c.object-meta.xml
<CustomObject>
    <label>IEP Transition Goal</label>
    <nameField>
        <displayFormat>ITG-{0000}</displayFormat>
        <label>Goal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IEP Transition Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>