force-app/main/default/objects/IEP_Transition_Goal__c/fields/Goal_Area__c.field-meta.xml
<CustomField>
    <fullName>Goal_Area__c</fullName>
    <label>Goal Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Employment</fullName><default>false</default><label>Employment</label></value>
            <value><fullName>Education</fullName><default>false</default><label>Education</label></value>
            <value><fullName>Independent Living</fullName><default>false</default><label>Independent Living</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>