force-app/main/default/objects/IEP_Transition_Goal__c/fields/Goal_Description__c.field-meta.xml
<CustomField>
    <fullName>Goal_Description__c</fullName>
    <label>Goal Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>