force-app/main/default/objects/IEP_Transition_Goal__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>IEP Transition Goals</relationshipLabel>
    <relationshipName>IEP_Transition_Goals</relationshipName>
    <type>Lookup</type>
</CustomField>